# cpu-affinity-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CPU_SCHEME_INSTRUCTION  Cargo.toml  LICENSE  Makefile.toml  README.md  SECURITY.md  SUPPORT.md  app.manifest  build.rs  state.json  todo.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-linux-beta.yml  release.yml
assets/: cpu_presets.json  social-preview.md
assets/fonts/: README.md
changelogs/: v1.0.7.txt  v1.0.8.txt  v1.1.2.txt  v1.1.5.txt  v1.2.0.txt  v1.2.1.txt  v1.3.0.txt  v1.3.1.txt  v1.4.0.txt  v1.5.0.txt
design/: cpu-affinity-design-review.html
docs/: comparison.md  dependency-advisories.md  github-metadata.md  linux-beta-release-checklist.md  release-checklist.md  release-process.md  release-smoke-matrix.md  shortcut-launch-plan.md  why.md
libs/os_api/: Cargo.toml
libs/os_api/src/: catalog.rs  common_os.rs  lib.rs  linux.rs  process.rs  shortcut.rs  windows.rs
libs/os_api/src/windows/: common.rs  cpu.rs  ipc.rs  launch.rs  mod.rs  processes.rs  scheduling.rs  shell.rs  window.rs
libs/windows_api/: Cargo.toml
libs/windows_api/src/: lib.rs
scripts/: assert-windows-release-manifest.ps1
src/: affinity.rs  app.rs  main.rs  main_linux.rs  main_windows.rs  models.rs  tray.rs
src/app/: app_models.rs  app_state.rs  build_contract_tests.rs  instance_forwarding.rs  mod.rs  shortcut_launch.rs  startup.rs
src/app/adapters/: mod.rs
src/app/adapters/discovery/: mod.rs
src/app/adapters/os/: mod.rs
src/app/adapters/storage/: mod.rs
src/app/controllers/: main_controller.rs  main_panel.rs  mod.rs
src/app/features/: mod.rs
src/app/features/diagnostics/: mod.rs
src/app/features/execution/: launch.rs  mod.rs  reconcile.rs  store.rs  tracking.rs
src/app/features/preferences/: mod.rs
src/app/features/rules/: mod.rs  service.rs
src/app/features/shortcut/: mod.rs
src/app/features/topology/: mod.rs
src/app/models/: affinity_app.rs  affinity_app_state.rs  affinity_app_state_saver.rs  affinity_app_state_storage.rs  app.rs  app_state.rs  app_state_storage.rs  app_to_run.rs  app_to_run_edit_state.rs  core_group.rs  cpu_presets.rs  cpu_schema.rs  group_form_state.rs  log_manager.rs  meta.rs  mod.rs  run_app_edit_state.rs  running_app.rs  task_progress_state.rs
src/app/models/app_state_storage/: migrations.rs  schema_refresh.rs  state_path.rs  storage_io.rs  tests.rs
src/app/navigation/: mod.rs  routes.rs
src/app/os_cmd/: linux.rs  mod.rs  windows.rs
src/app/runtime/: app.rs  group_form_state.rs  mod.rs  run_app_edit_state.rs  runtime_registry.rs  startup.rs  state.rs  ui_state.rs
src/app/runtime/commands/: apps.rs  groups.rs  launch.rs  mod.rs  preferences.rs
src/app/runtime/monitors/: mod.rs  process_settings.rs  running_apps.rs
src/app/shared/: ids.rs
src/app/shell/: app.rs  events.rs  mod.rs  routes.rs
src/app/shell/presenters/: mod.rs
src/app/shell/sessions/: group_form_session.rs  installed_picker_session.rs  mod.rs  rule_editor_session.rs  ui_session.rs
src/app/views/: central.rs  create_group.rs  edit_group.rs  footer.rs  group.rs  group_editor.rs  header.rs  installed_app_picker.rs  log_window.rs  logs.rs  main_central.rs  main_header.rs  mod.rs  run_settings.rs  shared_elements.rs
src/tray/: mod.rs  tray_windows.rs
tests/: monitor_test.rs
