[package]
name = "cpu-affinity-tool" 
version = "1.2.1"
edition = "2021"
default-run = "cpu-affinity-tool"
description = "Windows utility for managing CPU affinity of games and background applications."
license = "MIT"

[package.metadata.winres]
manifest = "app.manifest"

[[bin]]
name = "cpu-affinity-tool" 
path = "src/main_windows.rs"
required-features = ["windows"]

[[bin]]
name = "cpu-affinity-tool-linux" 
path = "src/main_linux.rs"
required-features = ["linux"]

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug = true

[dependencies]
mimalloc = "0.1.48"
tokio = { version = "1.49.0", features = ["time", "sync", "rt", "macros", "full"] }
os_api = { path = "libs/os_api" }
eframe = { version = "0.33.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
num_cpus = "1.16"
rfd = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
winit = "0.30"
parselnk = "0.1.1"
shlex = "1.3.0"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
libc = "0.2.171"
tray-icon = "0.21.3"
image = "0.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
windows = []
linux = []
