[package]
name = "cpu-affinity-tool" 
version = "1.5.0"
edition = "2021"
rust-version = "1.92"
default-run = "cpu-affinity-tool"
description = "Windows utility for managing CPU affinity of games and background applications."
license = "MIT"

[[bin]]
name = "cpu-affinity-tool" 
path = "src/main_windows.rs"
required-features = ["windows"]

[[bin]]
name = "cpu-affinity-tool-linux" 
path = "src/main_linux.rs"
required-features = ["linux"]

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug = true

[dependencies]
mimalloc = "0.1.52"
tokio = { version = "1.52.3", features = ["time", "sync", "rt", "macros", "full"] }
os_api = { path = "libs/os_api" }
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
num_cpus = "1.17.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
once_cell = "1.21.4"
regex = "1.13.1"

[target.'cfg(windows)'.dependencies]
winit = "0.30.13"
parselnk = "0.1.1"
shlex = "2.0.1"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
libc = "0.2.186"
tray-icon = "0.24.1"
image = "0.25.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
windows = []
linux = []
