[package]
name = "os_api"
version = "0.1.0"
edition = "2024"

[dependencies]
ntapi = "0.4.1"
parselnk = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
windows-sys =  { version = "0.59.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus"
] }
windows = { version = "0.61.1", features = ["Win32_System_Threading"] }