[package]
name = "os_api"
version = "0.1.0"
edition = "2024"

[dependencies]
ntapi = "0.4.1"
serde = { version = "1", features = ["derive"] }
winreg = "0.55.0"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_System_Diagnostics", "System", "System_Diagnostics"] }
sysinfo = "0.37.2"
single-instance = "0.3.3"