[package]
name = "os_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.1"
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_Globalization",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_Security"
] }

[target.'cfg(unix)'.dependencies]
nix = "0.29"
libc = "0.2.171"
shlex = "1.3.0"
errno = "0.3"